Fixes firefox timeline header and dnd bug for timeline assets. Also, fixes alreadyon timeline assets redropping from their containers bug, which was placing them in wrong positions

--- a/client/src/components/styles/TimelineContainer.css
+++ b/client/src/components/styles/TimelineContainer.css
@@ -11,7 +11,7 @@
 
 	display: flex;
 	flex-direction: column-reverse;
-	justify-content: space-between;
+	/*justify-content: space-between;*/
 	align-items: center;
 
 	padding: 5px 1px 5px 0;
